force-app/main/default/objects/Dan360_ProductoDeFactura__c/Dan360_ProductoDeFactura__c.object-meta.xml
<CustomObject>
    <description>Productos que se relacionan a una factura.</description>
    <label>Producto de factura</label>
    <nameField>
        <displayFormat>PrdXFact-{0000}</displayFormat>
        <label>Nombre de Producto de factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dan360_ProductoDeFactura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>