force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_CantidadProductoFacturado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CantidadProductoFacturado__c</fullName>
    <description>Cantidad de producto que se facturó en el pedido.</description>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>