force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Descuento__c</fullName>
    <description>Descuento aplicado al producto.</description>
    <label>Descuento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>