force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_Factura__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Factura__c</fullName>
    <description>Factura a la cual se relaciona el producto.</description>
    <label>Factura</label>
    <referenceTo>Dan360_Factura__c</referenceTo>
    <relationshipLabel>Producto de factura</relationshipLabel>
    <relationshipName>Dan360_ProductoDeFactura</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>