force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Dan360_Id_Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>