force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_IdLinea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_IdLinea__c</fullName>
    <label>Id línea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>