force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_ImporteCalculoUnitario__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteCalculoUnitario__c</fullName>
    <description>Se usa para guardar el valor unitario con los descuentos aplicados</description>
    <formula>Dan360_ImporteNetoGravado__c /  Dan360_CantidadProductoFacturado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe cálculo unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>