force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_ImporteNetoGravado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteNetoGravado__c</fullName>
    <label>Importe neto gravado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>