force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_NombreProducto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NombreProducto__c</fullName>
    <description>Nombre del producto.</description>
    <formula>Dan360_Producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del producto</label>
    <type>Text</type>
</CustomField>