force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PrecioTotal__c</fullName>
    <description>Precio total facturado del producto.</description>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>