force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_PrecioUnitario__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PrecioUnitario__c</fullName>
    <description>Precio unitario facturado del producto.</description>
    <label>Importe unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>