force-app/main/default/objects/Dan360_ProductoDeFactura__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto que se relacionará a la factura.</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Dan360_ProductoDeFactura</relationshipLabel>
    <relationshipName>Dan360_ProductoDeFactura</relationshipName>
    <type>Lookup</type>
</CustomField>